--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Business card</title>
 </head>
 <body>
-<br/>
+    <h1>The Bussiness card</h1> 
+<hr>
 <div class="container" style="text-align: center;">
     <div class="container">
         <div class="card">
