text align for heading

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Business card</title>
 </head>
 <body>
-    <h1>The Bussiness card</h1> 
+    <h1 style="text-align:center">The Bussiness card</h1> 
 <hr>
 <div class="container" style="text-align: center;">
     <div class="container">
