vcard changed to john

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        
       </div>
 <div style="margin:350px;">
-  <p style="text-align: center;"><a  href="Account Info.vcf" download="contact">download contact</a></p>
+  <p style="text-align: center;"><a  href="John Doe.vcf" download="contact">download contact</a></p>
 </div>
    
   </div>
